tests/negative/typecheck/exp.orng
fn main()->Char {4 ** 5}